# FastOutReader

./: AxisX.cpp  AxisX.h  BitBlock.cpp  BitBlock.h  BitBlockData.cpp  BitBlockData.h  BitPackedData.cpp  BitPackedData.h  CMakeLists.txt  DataGroup.cpp  DataGroup.h  DataSet.cpp  DataSet.h  Extractor.cpp  Extractor.h  IfstreamWithState.cpp  IfstreamWithState.h  IntegralArray.cpp  IntegralArray.h  IntegralData.cpp  IntegralData.h  Label.cpp  Label.h  Makefile  PagedIntegralData.cpp  PagedIntegralData.h  Periodic.cpp  Periodic.h  Periodic2.cpp  Periodic2.h  README.md  ReadFastOut.cpp  Reorderer.cpp  Reorderer.h  SharedObject.cpp  SharedObject.h  StringData.cpp  StringData.h  TimeTags.cpp  TimeTags.h  (+3 more)
fst/: Makefile  fstapi.c  fstapi.h
